2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Selection.h:
	* Selection.cpp:
	* X3DBrowser.cpp:
	* GridTool.h:
	* GridTool.cpp:
	* TransformTool.x3dv:
	* X3DNode.cpp:
	* LookAtViewer.cpp:
	* X3DTransformNodeTool.h:
	* X3DViewpointNode.h:
	* X3DViewpointNode.cpp:
	* X3DTransformMatrix4DNode.h:
	* ProximitySensor.cpp: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.cpp: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* SFColor.h:
	* SFColor.cpp:
	* SFColorRGBA.h:
	* SFColorRGBA.cpp:
	* GridTool.cpp:
	* X3DGridTool.cpp:
	* Material.cpp:
	* SpotLight.cpp:
	* PointLight.cpp:
	* TwoSidedMaterial.cpp:
	* MultiTexture.cpp:
	* DirectionalLight.cpp:
	* X3DFogObject.cpp: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BVH.cpp:
	* GridTool.h:
	* GridTool.cpp:
	* X3DActiveLayerTool.h:
	* X3DTransformNodeTool.h: 

2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DWeakPtr.h:
	* Selection.cpp:
	* X3DChildObject.h:
	* X3DChildObject.cpp:
	* X3DReferenceObject.h:
	* X3DReferenceObject.cpp: 

2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Loader.cpp:
	* GeoLOD.cpp:
	* Inline.cpp:
	* ExternProtoDeclaration.cpp: 

2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* AnchorTool.h:
	* Anchor.h:
	* Anchor.cpp:
	* Hit.h:
	* Hit.cpp:
	* PointingDevice.h:
	* PointingDevice.cpp:
	* X3DPointingDeviceSensorContext.h:
	* X3DPointingDeviceSensorNode.h:
	* X3DPointingDeviceSensorContext.cpp: 

2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DConstants.h:
	* X3DBaseNode.cpp:
	* obj2wrl.pl:
	* Generator.cpp:
	* X3DFieldDefinition.h:
	* GeoViewpoint.h:
	* jsContext.cpp:
	* GeoViewpoint.cpp: 

2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* obj2wrl.pl:
	* GoldenGate.cpp:
	* X3DRenderingContext.cpp: 

2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* SFString.cpp:
	* X3DPtrArray.h:
	* X3DLayerNode.cpp: 

2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.h:
	* Route.h: